--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@vue/composition-api": "^1.4.4",
     "angular": "^1.8.2",
     "axios": "^0.27.2",
+    "babel-jest": "^28.1.0",
     "echarts": "^5.2.2",
     "moment": "^2.29.1",
     "ngVue": "^1.7.8",
+    "ts-jest": "^28.0.2",
     "vue": "^2.6.14",
     "vue-echarts": "^6.0.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-env": "^7.17.10",
     "angularjs-template-loader": "^0.1.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
@@ -30,7 +32,7 @@
     "html-webpack-plugin": "^5.5.0",
     "htmlhint-loader": "^1.3.1",
     "imports-loader": "^0.8.0",
-    "jest": "^27.4.7",
+    "jest": "^28.1.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.4.0",
     "vue-loader": "^15.9.8",
@@ -41,6 +43,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --progress"
+    "start": "webpack-dev-server --open --progress",
+    "test:unit": "jest"
   }
 }
